Bug 1918508 - Make `IMEStateManager::OnUpdateHTMLEditorRootElement` stop asserting IME state r=m_kato

I could not reproduce the assertion failure even on tryserver in any platforms.
Therefore, I considered that it should do nothing if new IME state is unexpected
one because the caller wants to adjust IME state whether there is a root element
in the document or not.  Therefore, we don't need to update it to not "enabled"
when new root element is connected.

Differential Revision: https://phabricator.services.mozilla.com/D222578